crates/rome_formatter/tests/specs/prettier/js/last-argument-expansion/edge_case.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: edge_case.js

---
# Input
```js


a(
  SomethingVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLong,
  [
    {
      SomethingVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLong: 1
    }
  ]
);

exports.examples = [
  {
    render: withGraphQLQuery(
      'node(1234567890){image{uri}}',
      function(container, data) {
        return (
          <div>
            <InlineBlock>
              <img
                src={data[1234567890].image.uri}
                style={{position: 'absolute', top: '0', left: '0', zIndex:'-1'}}
              />
            </InlineBlock>
          </div>
        );
      }
    )
  }
];

someReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReally.a([
  [],
  // comment
  [],
]);

(function webpackUniversalModuleDefinition() {})(this, function(__WEBPACK_EXTERNAL_MODULE_85__, __WEBPACK_EXTERNAL_MODULE_115__) {
return /******/ (function(modules) { // webpackBootstrap

/******/ })
/************************************************************************/
/******/ ([
/* 0 */
/***/ function(module, exports, __webpack_require__) {

/***/ },
/* 1 */
/***/ function(module, exports, __webpack_require__) {

/***/ },
/* 2 */
/***/ function(module, exports, __webpack_require__) {

/***/ }
/******/ ])
});

```

# Output
```js
a(
  SomethingVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLong,
  [
    {
      SomethingVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryVeryLong: 1,
    },
  ],
);

exports.examples =
  [
    {
      render: withGraphQLQuery(
        "node(1234567890){image{uri}}",
        function (container, data) {
          return (
          <div>
            <InlineBlock>
              <img
                src={data[1234567890].image.uri}
                style={{position: 'absolute', top: '0', left: '0', zIndex:'-1'}}
              />
            </InlineBlock>
          </div>
        );
        },
      ),
    },
  ];

someReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReally.a([
  [],
  // comment
  [],
]);

(function webpackUniversalModuleDefinition() {})(
  this,
  function (__WEBPACK_EXTERNAL_MODULE_85__, __WEBPACK_EXTERNAL_MODULE_115__) {
    return (function (modules) {
      /******/
      // webpackBootstrap
      /******/
    })
    /************************************************************************/
    /******/ (
      [
        /* 0 */
        /***/ function (module, exports, __webpack_require__) {
          /***/
        },
        /* 1 */
        /***/ function (module, exports, __webpack_require__) {
          /***/
        },
        /* 2 */
        /***/ function (module, exports, __webpack_require__) {
          /***/
        },
        /******/
      ],
    );
  },
);

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ edge_case.js:18:11
   │  
18 │ ┌           <div>
19 │ │             <InlineBlock>
20 │ │               <img
21 │ │                 src={data[1234567890].image.uri}
22 │ │                 style={{position: 'absolute', top: '0', left: '0', zIndex:'-1'}}
23 │ │               />
   │ └────────────────^ TypeScript only syntax

error: unterminated regex literal
   ┌─ edge_case.js:24:27
   │
24 │             </InlineBlock>
   │              -            ^ ...but the line ends here
   │              │            
   │              a regex literal starts there...

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ edge_case.js:25:11
   │
25 │           </div>
   │           ^^^^^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ edge_case.js:26:9
   │
26 │         );
   │         ^ Expected an expression here


```


